tests/test_assets/semantic/invalid/definite_assignment/read_before_initialization.cog
consume::(value: i32) -> void {
}

return_read::() -> i32 {
    value: i32;
    return value;
}

argument_read::() -> void {
    value: i32;
    consume(value);
}

discarded_read::() -> void {
    value: i32;
    value;
}
