tests/test_assets/semantic/invalid/definite_assignment/read_before_initialization.expected
semantic error at line 6: variable 'value' may be uninitialized
semantic error at line 11: variable 'value' may be uninitialized
semantic error at line 16: variable 'value' may be uninitialized
3 semantic errors generated.
